--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist"
   },
   "author": "bekas",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "three": "^0.137.5",
     "three-orbit-controls": "^82.1.0"
   }
